--- a/Ilovepdf/views/home.handlebars
+++ b/Ilovepdf/views/home.handlebars
@@ -1,4 +1,7 @@
-<h1> Every tool you need to work with PDFs in one place </h1>
-<h2>Every tool you need to use PDFs, at your fingertips.
- All are 100% FREE and easy to use! Merge, split, compress, 
- convert, rotate, unlock and watermark PDFs with just a few clicks.</h2>
+<h2> Every tool you need to work with PDFs in one place </h2>
+
+<p>
+    Every tool you need to use PDFs, at your fingertips.
+    All are 100% FREE and easy to use! Merge, split, compress, 
+    convert, rotate, unlock and watermark PDFs with just a few clicks.
+ </p>
