--- a/Ilovepdf/views/jpg2pdf.handlebars
+++ b/Ilovepdf/views/jpg2pdf.handlebars
@@ -3,8 +3,7 @@
     Convert JPG images to PDF in seconds. Easily adjust orientation and margins.
 </p>
 
-<form action="" method="POST" enctype = "multipart/form-data">
-<input type="file" name="file"/> 
-<br>
+<form action="/jpg_to_pdf" method="post" enctype = "multipart/form-data">
+<input type="file" name="file"/> <br>
 <input type="submit">
 </form>
