--- a/Ilovepdf/views/layouts/main.handlebars
+++ b/Ilovepdf/views/layouts/main.handlebars
@@ -40,6 +40,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/compress_pdf"> Compress PDF </a>
                     </li>
+                    
+                    <li class="nav-item">
+                        <a class="nav-link" href="/jpg_to_pdf"> JPG TO PDF</a>
+                    </li>
                 </ul>
             </div>
         </div>
