--- a/Ilovepdf/views/download.handlebars
+++ b/Ilovepdf/views/download.handlebars
@@ -3,5 +3,5 @@
 </h2>
 
 <button type="button" class="btn btn-primary" download="file.pdf">
-  Download File
+  <a href={{{downloadfile}}}> Download File </a>
 </button>
