added new functionalities. Facing async issues with word2pdf

--- a/Ilovepdf/views/layouts/main.handlebars
+++ b/Ilovepdf/views/layouts/main.handlebars
@@ -44,6 +44,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/jpg_to_pdf"> JPG TO PDF</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/pdf_to_jpg"> PDF TO JPG</a>
+                    </li>
                 </ul>
             </div>
         </div>
