updated download flow, facing issue with deleting files after upload

--- a/Ilovepdf/views/download.handlebars
+++ b/Ilovepdf/views/download.handlebars
@@ -2,6 +2,15 @@
     Your file is available for download
 </h2>
 
+
+
+<form action="/download"  method="POST">
+<button type="submit"> Download </button>
+
+</form>
+
+
+<!--
 <button type="button" class="btn btn-primary" download="file.pdf">
   <a href={{{downloadfile}}}> Download File </a>
-</button>
+</button> -->
