--- a/Ilovepdf/views/jpg2pdf.handlebars
+++ b/Ilovepdf/views/jpg2pdf.handlebars
@@ -3,22 +3,8 @@
     Convert JPG images to PDF in seconds. Easily adjust orientation and margins.
 </p>
 
-<form action="/jpg_to_pdf" method="post" enctype = "multipart/form-data">
-<!--<input type="file" name="uploadedImages" multiple="multiple"/> <br>-->
-<input type="file" name="file"/> <br>
+<form action="/jpg_to_pdf" method="post"  multiple = "multiple"enctype = "multipart/form-data">
+<input type="file" name="files"/> <br>
 
 <input type="submit">
 </form>
-
-<script>
-//form.addEventListener('submit', async function (e) {
-  //  const files = e.target.uploadedImages.files
-
-    //if (files.length != 0){
-      //  for (const single_file of files){
-        //    data.append('uploadedImages', single_file)
-        //}
-    //}
-//})
-
-</script>
