--- a/Tutorials/old/today.css
+++ b/Tutorials/old/today.css
@@ -1,11 +1,20 @@
 body{
     font-family: sans-serif;
     color: darkblue;
-    font-size: 22px;
     line-height: 1.5;
     background-color: #ffefd5;
 }
 
+h1{
+    font-size: 3rem;
+    padding: 0.5em;
+}
+
 h2 {
     color: black;
+    font-size: 2rem;
+}
+
+p {
+    font-size: 1rem;
 }
